@@ -32,7 +32,7 @@ from PyQt4 import QtCore
 from PyQt4 import QtGui
 
 
-from vitables.h5db.nodeItemDelegate import NodeItemDelegate
+from vitables.h5db.nodeitemdelegate import NodeItemDelegate
 
 translate = QtGui.QApplication.translate
 
